KNL-563 don't use new Integer and use EntrySetIterator rather than key iterator
git-svn-id: https://source.sakaiproject.org/svn/kernel@82054 66ffb92e-73f9-0310-93c1-f5514f145a0a